@@ -2,7 +2,8 @@
 
 	* modules/syscalls/posix.lisp (make-xterm-io-stream): avoid a race
 	condition [between (delete-file tmps) and (mknod tmps :FIFO :RWXU)]
-	by using mkdtemp and creating the pipe in the temporary directory
+	by using mkdtemp and creating the pipe in the temporary directory;
+	accept :XTERM argument and support rxvt in addition to xterm
 
 2008-06-17  Sam Steingold  <sds@gnu.org>
 
